// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Components Render Brand Renders Renders Brand 1`] = `
<Link
  href="#"
>
  <styled.a>
    <styled.img
      alt="BrandName logo"
      src="/"
    />
    <styled.h2>
      BrandName
    </styled.h2>
  </styled.a>
</Link>
`;

exports[`Navbar Components Render Brand Renders Renders Brand 2`] = `
<Link
  href="#"
>
  <styled.a>
    <styled.img
      alt=" logo"
      src="/"
    />
  </styled.a>
</Link>
`;

exports[`Navbar Components Render Brand Renders Renders Brand 3`] = `
<Link
  href="#"
>
  <styled.a>
    <styled.h2>
      BrandName
    </styled.h2>
  </styled.a>
</Link>
`;

exports[`Navbar Components Render NavItem Renders Renders NavSlider 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bwzfXH",
        "isStatic": false,
        "rules": Array [
          "
  display: flex;
  color: ",
          [Function],
          ";
  white-space: nowrap;
  & a {
    text-decoration: none;
    color: ",
          [Function],
          ";
  }
  align-self: center;
  margin: ",
          [Function],
          ";
",
        ],
      },
      "displayName": "styled.span",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bwzfXH",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Navbar Components Render NavItem Renders Renders NavSlider with theme 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bwzfXH",
        "isStatic": false,
        "rules": Array [
          "
  display: flex;
  color: ",
          [Function],
          ";
  white-space: nowrap;
  & a {
    text-decoration: none;
    color: ",
          [Function],
          ";
  }
  align-self: center;
  margin: ",
          [Function],
          ";
",
        ],
      },
      "displayName": "styled.span",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bwzfXH",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  theme={
    Object {
      "fontFamily": "Palatino",
      "primaryColor": "dodgerblue",
      "white": "white",
    }
  }
/>
`;

exports[`Navbar Components Render NavSlider Renders Renders NavSlider 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-EHOje",
        "isStatic": false,
        "rules": Array [
          "
  min-height: 50px;
  display: flex;
  flex-flow: row wrap;
  font-size: ",
          [Function],
          ";

  @media (max-width: ",
          [Function],
          ") {
    display: ",
          [Function],
          ";
    font-size: ",
          [Function],
          ";
    width: 100%;
    order: 50;
    background: ",
          [Function],
          ";
  }
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-EHOje",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Navbar Components Render NavSlider Renders Renders NavSlider with theme 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-EHOje",
        "isStatic": false,
        "rules": Array [
          "
  min-height: 50px;
  display: flex;
  flex-flow: row wrap;
  font-size: ",
          [Function],
          ";

  @media (max-width: ",
          [Function],
          ") {
    display: ",
          [Function],
          ";
    font-size: ",
          [Function],
          ";
    width: 100%;
    order: 50;
    background: ",
          [Function],
          ";
  }
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-EHOje",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  theme={
    Object {
      "fontFamily": "Palatino",
      "primaryColor": "dodgerblue",
      "white": "white",
    }
  }
/>
`;

exports[`Navbar Components Render Navwrapper Renders Renders NavWrapper 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  background: ",
          [Function],
          ";
  min-height: 50px;
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-end;
  color: ",
          [Function],
          ";
  position: sticky;
  z-index: 6;
  top: 0;
",
        ],
      },
      "displayName": "styled.nav",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "nav",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Navbar Components Render Navwrapper Renders Renders NavWrapper with theme 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  background: ",
          [Function],
          ";
  min-height: 50px;
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-end;
  color: ",
          [Function],
          ";
  position: sticky;
  z-index: 6;
  top: 0;
",
        ],
      },
      "displayName": "styled.nav",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "nav",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  theme={
    Object {
      "fontFamily": "Palatino",
      "primaryColor": "dodgerblue",
      "white": "white",
    }
  }
/>
`;
